# spain-2026-eclipse-viewpoints

./: .gitignore  LICENSE  README.md  add_forests.py  add_roads.py  app.py  prepare.py  pyproject.toml
templates/: index.html
