[project]
name = "eclipse-viewer"
version = "0.1.0"
description = "Visualize where in Spain you can see the Aug 12 2026 total solar eclipse without mountain obstruction"
requires-python = ">=3.11"
dependencies = [
    "ephem>=4.1",
    "numpy>=1.24",
    "Pillow>=10.0",
    "flask>=3.0",
    "tqdm>=4.65",
]
